Fix issue range slide bar and custom some style.

--- a/apps/image-editor/examples/example01-includeUi.html
+++ b/apps/image-editor/examples/example01-includeUi.html
@@ -48,7 +48,19 @@
             name: 'SampleImage',
           },
           theme: blackTheme, // or whiteTheme
-          initMenu: 'filter',
+          // initMenu: 'filter',
+          initMenu: "draw",
+          menu: [
+              // "crop",
+              // "flip",
+              // "rotate",
+              "draw",
+              "shape",
+              // "icon",
+              "text",
+              // "mask",
+              // "filter",
+          ],
           menuBarPosition: 'bottom',
         },
         cssMaxWidth: 700,
