--- a/apps/image-editor/examples/example01-includeUi.html
+++ b/apps/image-editor/examples/example01-includeUi.html
@@ -66,6 +66,10 @@
         cssMaxWidth: 700,
         cssMaxHeight: 500,
         usageStatistics: false,
+        selectionStyle: {
+          cornerSize: 50,
+          rotatingPointOffset: 70,
+        },
       });
       window.onresize = function () {
         imageEditor.ui.resizeEditor();
